[gd_scene load_steps=10 format=3 uid="uid://b4o23ec1ofw0u"]

[ext_resource type="Script" uid="uid://uqoft1ixa4u" path="res://Scenes/MainMenu/main_menu.gd" id="1_qgdf6"]
[ext_resource type="AudioStream" uid="uid://d3vqfkkopahli" path="res://Audio/Title Theme Intro.wav" id="2_0l8wx"]
[ext_resource type="AudioStream" uid="uid://4phablu7c73i" path="res://Audio/UI Select.wav" id="2_0qgbs"]
[ext_resource type="Script" uid="uid://da3fqyglvtkvb" path="res://Scenes/MainMenu/theme_music.gd" id="2_adu2g"]
[ext_resource type="AudioStream" uid="uid://bsoybj41gsvrf" path="res://Audio/UI Hover.wav" id="3_adu2g"]
[ext_resource type="AudioStream" uid="uid://bv0r0qp0cgpsk" path="res://Audio/Title Theme Loop.wav" id="4_n5jej"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6upyc"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sho4w"]
random_pitch = 2.04
streams_count = 1
stream_0/stream = ExtResource("2_0qgbs")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fxueo"]
random_pitch = 1.33
streams_count = 1
stream_0/stream = ExtResource("3_adu2g")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgdf6")

[node name="MenuArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -227.5
offset_top = -300.0
offset_right = 227.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_6upyc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Play" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Play"

[node name="Credits" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Credits"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="Credits" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Return" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 16.0
offset_top = 446.0
offset_right = 320.0
offset_bottom = 517.0
text = "Return"

[node name="ThemeMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0l8wx")
volume_db = -12.0
autoplay = true
script = ExtResource("2_adu2g")
next_song = ExtResource("4_n5jej")

[node name="uisfx" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sho4w")

[node name="uiHoversfx" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_fxueo")

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Credits/Return" to="." method="_on_return_mouse_entered"]
[connection signal="pressed" from="Credits/Return" to="." method="_on_return_pressed"]
[connection signal="finished" from="ThemeMusic" to="ThemeMusic" method="_on_finished"]
